@@ -1,3 +1,8 @@
+2012-09-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* support/regression/tests/bug3467508.c:
+	  Regression test for bug #3467508.
+
 2012-09-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/SDCCast.c (decorateType): fixed bug #3467508
